Add socket.io and d3 graph

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
 <p>
 	d3.js graph goes here
 </p>
+<h1>{{title}}</h1>
+<h2>{{subtitle}}</h2>
+<svg width="960" height="800"></svg>
+<button (click)="loadnewData()">NEW DATA</button>
