Add angular material table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<div style="font-family: 'Roboto';">
+<mat-toolbar class="default-primary-color">
+  <mat-toolbar-row class="text-primary-color">
+    <span><h3>Realtime Bitcoin Exchange Currency</h3></span>
+    <span style="flex: 1 1 auto;"></span>
+    <i class="fa fa-github fa-3x icon" aria-hidden="true" (click)="gotoGithub()"></i>
+  </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
+</div>
