--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,2 @@
-<p>
-	d3.js graph goes here
-</p>
-<h1>{{title}}</h1>
-<h2>{{subtitle}}</h2>
-<svg width="960" height="800"></svg>
-<button (click)="loadnewData()">NEW DATA</button>
+<svg class="svg" width="800" height="600"></svg>
+<app-table [stats]="STATISTICS"></app-table>
